--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "file-loader": "6.1.1",
     "fs-extra": "^9.0.1",
     "html-webpack-plugin": "4.5.0",
+    "husky": "^6.0.0",
     "identity-obj-proxy": "3.0.0",
     "immer": "^9.0.1",
     "jest": "26.6.0",
@@ -157,6 +158,15 @@
     ]
   },
   "devDependencies": {
-    "eslint-config-airbnb": "^18.2.1"
+    "eslint-config-airbnb": "^18.2.1",
+    "lint-staged": "^10.5.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": "eslint --fix"
   }
 }
