--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "file-loader": "6.1.1",
     "fs-extra": "^9.0.1",
     "html-webpack-plugin": "4.5.0",
-    "husky": "^6.0.0",
     "identity-obj-proxy": "3.0.0",
     "immer": "^9.0.1",
     "jest": "26.6.0",
@@ -77,10 +76,19 @@
     "webpack-manifest-plugin": "2.2.0",
     "workbox-webpack-plugin": "5.1.4"
   },
+  "devDependencies": {
+    "eslint-config-airbnb": "^18.2.1",
+    "husky": "^6.0.0",
+    "lint-staged": "^10.5.4"
+  },
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "prepare": "lint-staged"
+  },
+  "lint-staged": {
+    "*.js": "eslint --fix"
   },
   "eslintConfig": {
     "extends": [
@@ -156,17 +164,5 @@
     "presets": [
       "react-app"
     ]
-  },
-  "devDependencies": {
-    "eslint-config-airbnb": "^18.2.1",
-    "lint-staged": "^10.5.4"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.js": "eslint --fix"
   }
 }
