--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
   "devDependencies": {
     "eslint-config-airbnb": "^18.2.1",
     "husky": "^6.0.0",
-    "lint-staged": "^10.5.4"
+    "lint-staged": "^10.5.4",
+    "normalize.css": "^8.0.1"
   },
   "scripts": {
     "start": "node scripts/start.js",
