--- a/webapp/package.json
+++ b/webapp/package.json
@@ -84,8 +84,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js",
-    "prepare": "lint-staged"
+    "test": "node scripts/test.js"
   },
   "lint-staged": {
     "*.js": "eslint --fix"
