--- a/webapp/package.json
+++ b/webapp/package.json
@@ -79,7 +79,10 @@
   "devDependencies": {
     "eslint-config-airbnb": "^18.2.1",
     "husky": "^6.0.0",
-    "lint-staged": "^10.5.4"
+    "lint-staged": "^10.5.4",
+    "normalize.css": "^8.0.1",
+    "react-query": "^3.13.6",
+    "react-router-dom": "^5.2.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
